New version without multiline div or textarea.
- fingers crossed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,8 @@ button:hover {
 
 .employee-section,
 .work-details-section,
-.additional_comments-section {
+.additional_comments-section,
+.conditions-section {
   border: 1px solid #ccc;
   padding: 16px; /* 1rem = 16px */
   border-radius: 4px;
